--- a/mooreadvanced/src/index.css
+++ b/mooreadvanced/src/index.css
@@ -332,28 +332,35 @@ body {
 
 /* Navigation */
 
-.Navigation{
-  background-color: #1E3653;
+.Navigation {
+  background-color: #1e3653;
   overflow: hidden;
   list-style: none;
-  height: 100%;
+  height: 70px;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 100;
+  position: sticky;
 }
 
-.nav-logo{
-  width: 30px;
-  height: 30px;
+.nav-logo img {
+  height: 150px;
 }
 
-.Navigation ul{
+.Navigation ul {
   display: flex;
   list-style: none;
   flex-direction: row;
   justify-content: flex-end;
   align-items: flex-end;
   margin: 0;
-  /* margin-left: auto; */
+  margin-bottom: auto;
+}
 
-
+.Navigation ul li {
+  display: inline-block;
 }
 
 /* Style the links inside the navigation bar */
