cleaned up the page documentation and styling

--- a/mooreadvanced/src/index.css
+++ b/mooreadvanced/src/index.css
@@ -549,6 +549,7 @@ body {
   font-style: normal;
   font-weight: 300;
   font-size: 24px;
+  width: auto;
  
   color: #162320;
 }
@@ -596,6 +597,7 @@ button {
 .steps {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: flex-start;
   justify-content: center;
   gap: 20px;
@@ -618,7 +620,7 @@ button {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  padding: 15px;
+  padding: 10px;
   color: #EAF1F0;  
   width: 300px;
 }
@@ -635,7 +637,7 @@ button {
 
 .what-we-do {
   padding: 10px;
-
+  width: auto;
   background: #1e3653;
 }
 
@@ -662,11 +664,18 @@ strong{
   color: #fff;
 }
 
+.tag-name{
+  font-size:24px;
+
+}
+
 i{
-  font-size: medium;
+  font-size: large;
   font-weight: 700;
   color: #1E3653;
 }
+
+
 
 .about-us-image {
   height: 400;
@@ -1255,8 +1264,8 @@ input:checked ~ .faq-content {
   }
 
   .service-image img{
-    width: 350;
-    height: 350;
+    width: 350px;
+    height: 350px;
   }
 
 }
@@ -1311,13 +1320,13 @@ input:checked ~ .faq-content {
     display: flex;
     flex-direction: column-reverse;
   }
-  .Homepage-content{
+  /* .Homepage-content{
     font-size: medium;
 
-  }
+  } */
 
   .steps{
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: center;
   }
   
@@ -1341,6 +1350,11 @@ input:checked ~ .faq-content {
   .service-image img{
     width: 350;
     height: 350;
+  }
+
+  .about-us-image img{
+    width: 500px;
+    height: 300px;
   }
 
 }
