--- a/mooreadvanced/src/index.css
+++ b/mooreadvanced/src/index.css
@@ -26,7 +26,7 @@ body {
 }
 
 .mb-section {
-  margin-bottom: 1.6rem;
+  margin-bottom: 9.6rem;
 }
 /*****************************/
 /* About us                */
@@ -326,13 +326,36 @@ body {
 /*****************************/
 /* Contact us                */
 /*****************************/
-.contact {
+.contact-us {
+  min-height: 100vh;
+  /* background-color: #1e3653; */
+  /* color: #fff; */
+  /* min-width: 100vw; */
+  /*display: flex;
+  flex-direction: column; */
+}
+
+.contact-us .content {
+  text-align: center;
+  padding: 9.6rem 0;
+}
+
+.contact-us .content h1 {
+  font-size: 3.2rem;
+  margin-bottom: 2.4rem;
+}
+
+.contact-us-footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+/* .contact {
   background-color: #1e3653;
   padding: 9.6rem;
 }
 
 .contact-wrapper {
-  /* background-image: url('../public/assets/logo/Moore\ Advanced\ Solutions\ \(1\).svg'); */
   background-repeat: no-repeat;
   background-position: center;
   background-size: 70%;
@@ -370,10 +393,6 @@ body {
   align-items: center;
   justify-content: space-between;
   gap: 2rem;
-  /* display: grid;
-  grid-template-columns: 1fr 1fr;
-  column-gap: 3.2rem;
-  row-gap: 2.4rem; */
 }
 
 .contact-form .input-group {
@@ -425,7 +444,7 @@ body {
 
 .contact-form button:hover {
   opacity: 1;
-}
+} */
 
 /*****************************/
 /* Page not found            */
@@ -524,8 +543,7 @@ body {
   gap: 85px;
 }
 
-.Homepage-content-title{
-
+.Homepage-content-title {
   /* width: 600px;
   height: 220px; */
   font-family: 'EB Garamond';
@@ -549,7 +567,7 @@ body {
   font-style: normal;
   font-weight: 300;
   font-size: 24px;
- 
+
   color: #162320;
 }
 
@@ -602,35 +620,34 @@ button {
   padding: 10px;
 }
 
-.step-exp{
-  color: #E0E9F3;
+.step-exp {
+  color: #e0e9f3;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 10px;
 }
 
-.step-exp h2{
+.step-exp h2 {
   font-size: x-large;
 }
 
-.step{
+.step {
   display: flex;
   flex-direction: column;
   gap: 10px;
   padding: 15px;
-  color: #EAF1F0;  
+  color: #eaf1f0;
   width: 300px;
 }
 
-.step ul{
+.step ul {
   list-style-type: disc;
 }
 
-.step img{
+.step img {
   width: 250px;
-  height: 150px; 
-
+  height: 150px;
 }
 
 .what-we-do {
@@ -654,18 +671,17 @@ button {
   gap: 20px;
 }
 
-
-strong{
+strong {
   color: #f1bf48;
 }
-.tagline{
+.tagline {
   color: #fff;
 }
 
-i{
+i {
   font-size: medium;
   font-weight: 700;
-  color: #1E3653;
+  color: #1e3653;
 }
 
 .about-us-image {
@@ -695,7 +711,7 @@ i{
   width: 600px;
 }
 
-.services-offered-list{
+.services-offered-list {
   /* display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 2fr));
   grid-template-rows: 1fr;
@@ -711,7 +727,7 @@ i{
   background-color: #f5f5f5;
   /* margin: 50px auto; */
   max-width: 400px;
-  text-align:left;
+  text-align: left;
   border-radius: 4px;
   padding: 20px;
   box-shadow: 10px 10px 30px #bdbdbd;
@@ -732,17 +748,16 @@ i{
   gap: 20px;
 }
 
-.btn-link a{
+.btn-link a {
   background-color: transparent;
-  color: #1E3653;
+  color: #1e3653;
   margin-top: 3em;
   text-decoration: underline;
   /* padding: 1em; */
 }
 
-.main-service{
-  background-color: #FFE8B2;
-
+.main-service {
+  background-color: #ffe8b2;
 }
 
 .photo-reference {
@@ -811,20 +826,20 @@ i{
   align-items: center;
   justify-content: center;
   padding: 3em;
-  background-color: #BDBDBD;
+  background-color: #bdbdbd;
   height: 100%;
   gap: 50px;
 }
 
-.services-intro-text h1{
+.services-intro-text h1 {
   font-size: 40px;
 }
 
-hr{
+hr {
   color: #000;
 }
 
-.service-container{
+.service-container {
   padding: 4em;
 }
 
@@ -832,7 +847,7 @@ hr{
   border-radius: 50%;
 }
 
-.service{
+.service {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -841,32 +856,29 @@ hr{
   padding: 4rem;
   box-shadow: 8px 8px 4px rgba(0, 0, 0, 0.25);
   height: 100%;
-  background-color: #E0E9F3;
+  background-color: #e0e9f3;
   /* width: 100%; */
   margin: 1em;
-
-
 }
 
-.service ul{
+.service ul {
   margin-left: 2.5rem;
 }
 
-.cta-box{
+.cta-box {
   margin-top: 2rem;
   padding: 1em;
   font-size: large;
   font-weight: 300;
-  background-color: #1E3653;
+  background-color: #1e3653;
   color: #fff;
   text-decoration: none;
   border-radius: 4px;
   width: fit-content;
 }
 
-.service li{
-  list-style-type:disc;
-
+.service li {
+  list-style-type: disc;
 }
 
 /* .service-title{
@@ -879,25 +891,23 @@ hr{
 
 } */
 
-.btn a{
-  color:#fff;
+.btn a {
+  color: #fff;
 }
 
-.service-title  h2{
+.service-title h2 {
   font-size: 40px;
   padding: auto;
   margin-bottom: 1em;
 }
 
-.service-image{
+.service-image {
   padding: 1em;
 }
 
-.primary{
- background-color: #ffe8b2;
+.primary {
+  background-color: #ffe8b2;
 }
-
-
 
 .how-it-works-content {
   display: flex;
@@ -911,129 +921,105 @@ hr{
 /* FAQ */
 
 .Faq {
-
   color: #502c2c;
- 
+
   background: #f1edec;
- 
+
   padding: 1.2rem;
- 
+
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
- 
+
   max-width: 130rem;
- 
+
   margin: 0 auto;
- 
+
   font-size: 1.2rem;
- 
 }
 
 .faq-check {
-
   position: absolute;
- 
+
   opacity: 0;
- 
+
   z-index: -1;
- 
 }
 
 .faq {
+  color: #e0e9f3;
 
-  color: #E0E9F3;
- 
   margin-bottom: 3rem;
- 
- }
- 
- 
- 
+}
+
 .faq-label {
- 
   font-size: 1.5rem;
- 
+
   display: flex;
- 
+
   align-items: center;
- 
+
   justify-content: space-between;
- 
+
   padding: 1em;
- 
-  background: #1E3653;
- 
+
+  background: #1e3653;
+
   font-weight: bold;
- 
+
   cursor: pointer;
- 
+
   user-select: none;
 
   font-size: larger;
- 
 }
 
- 
 .faq-label::after {
- 
   content: '\002B';
- 
+
   padding: 0.51rem;
- 
+
   transform: scale(1.8);
- 
+
   text-align: center;
- 
+
   transition: all 0.35s;
- 
 }
- 
- 
- 
+
 .faq-content {
- 
   max-height: 0;
- 
+
   padding: 0 1em;
- 
+
   color: #2c3e50;
- 
+
   background: white;
- 
+
   transition: all 0.35s;
- 
+
   display: none;
 
   font-size: large;
- 
-
 }
 
 input:checked + .faq-label {
+  background: #1e3653;
+}
 
-  background: #1E3653;
- 
-}
- 
 input:checked + .faq-label::after {
- 
   content: '\2013';
- 
+
   transform: scale(1.5);
- 
 }
- 
+
 input:checked ~ .faq-content {
- 
   max-height: 100vh;
- 
+
   padding: 1em;
- 
+
   display: block;
- 
+
   transition: all 0.35s;
- 
 }
- 
+
 /* Footer */
 .footer {
   background-color: #ccddf2c7;
@@ -1058,8 +1044,8 @@ input:checked ~ .faq-content {
   margin-bottom: 4rem;
 }
 
-.footer-contact-name{
-  color: #1E3653;
+.footer-contact-name {
+  color: #1e3653;
 }
 
 .footer-content .logo-col {
@@ -1121,7 +1107,7 @@ input:checked ~ .faq-content {
   /* justify-self: flex-end; */
 }
 
-.whatsapp-contact{
+.whatsapp-contact {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -1148,7 +1134,6 @@ input:checked ~ .faq-content {
   .contact-form {
     width: 100%;
   }
-
 }
 
 /*****************************/
@@ -1223,42 +1208,40 @@ input:checked ~ .faq-content {
     height: auto;
   }
 
-  .welcome-section{
+  .welcome-section {
     display: flex;
     flex-direction: column-reverse;
   }
-  .Homepage-content{
+  .Homepage-content {
     font-size: medium;
-
   }
 
-  .steps{
+  .steps {
     flex-direction: column;
     align-items: center;
   }
-  
-  .about-us{
+
+  .about-us {
     flex-direction: column;
     padding: 2em;
   }
 
-  .services-offered{
-    flex-direction: column;
-  }
-   
-  .testimonial{
+  .services-offered {
     flex-direction: column;
   }
 
-  .service{
+  .testimonial {
     flex-direction: column;
   }
 
-  .service-image img{
+  .service {
+    flex-direction: column;
+  }
+
+  .service-image img {
     width: 350;
     height: 350;
   }
-
 }
 
 /*****************************/
@@ -1307,41 +1290,38 @@ input:checked ~ .faq-content {
     padding: 4.8rem;
   }
 
-  .welcome-section{
+  .welcome-section {
     display: flex;
     flex-direction: column-reverse;
   }
-  .Homepage-content{
+  .Homepage-content {
     font-size: medium;
-
   }
 
-  .steps{
+  .steps {
     flex-direction: column;
     align-items: center;
   }
-  
-  .about-us{
+
+  .about-us {
     flex-direction: column;
     padding: 2em;
   }
 
-  .services-offered{
-    flex-direction: column;
-  }
-   
-  .testimonial{
+  .services-offered {
     flex-direction: column;
   }
 
-  .service{
+  .testimonial {
     flex-direction: column;
   }
 
-  .service-image img{
+  .service {
+    flex-direction: column;
+  }
+
+  .service-image img {
     width: 350;
     height: 350;
   }
-
 }
-
